fix xpopup jump

--- a/src/styles/controls/xpopup.scss
+++ b/src/styles/controls/xpopup.scss
@@ -8,16 +8,17 @@
   width: 100%;
   height: 100%;
   background-color: rgba(#000, .8);
-  overflow: hidden auto;
+  overflow: hidden scroll;
   display: flex;
 
   &:not(.is-active) {
     opacity: 0;
     visibility: hidden;
+    overflow: hidden;
   }
 }
 .xpopup__dialog {
-  @include transition;
+  @include transition(all .3s $easing);
   padding: 3rem;
   width: 100%;
   background-color: #fff;
@@ -27,6 +28,7 @@
   box-shadow: 0 2px 4px -1px rgba(#000, .14), 0 4px 5px 0 rgba(#000, .098), 0 1px 10px 0 rgba(#000, .084);
 
   .xpopup:not(.is-active) & {
+    opacity: 0;
     transform: translateY(5rem);
   }
 
@@ -46,6 +48,7 @@
       width: auto;
       margin-left: -3rem;
       margin-right: -3rem;
+      margin-bottom: -3rem;
     }
   }
 }
